--- a/package.json
+++ b/package.json
@@ -1,13 +1,43 @@
 {
+  "name": "personal-site-node-16",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.14",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.5",
+    "@types/mdx": "^2.0.5",
     "next": "latest",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "20.1.4",
+    "@types/react": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "gray-matter": "^4.0.3",
+    "postcss": "^8.4.23",
+    "prettier": "2.8.8",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   }
 }
